client/signup-project/src/components/common/Common.css
#background_gradient {
  background: linear-gradient(rgba(188, 220, 255, 1),
      rgba(233, 244, 255, 1),
      rgba(248, 251, 255, 1),
      rgba(255, 255, 255, 1));
  height: 1080px;
  width: 1920px;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  /*수평 축 정렬*/
  align-items: center;

}

.error {
  font-family: Pretendard Variable;
  font-weight: 400;
  font-style: Regular;
  font-size: 13px;
  line-height: 100%;
  letter-spacing: -4%;
  text-align: left;
  color: rgba(238, 67, 70, 1);
}


#card_box {
  Top: 98px;
  Left: 704px;
  padding: 50px 40px;
  /*top,Right과 botton,Left가 동일한경우*/
  gap: 30px 0;
  border: 1px;
  border-radius: 15px;
  border-color: rgba(137, 132, 132, 0.18);
  background-color: rgba(255, 255, 255, 1);
  box-shadow: 0 0 13px 1px rgba(0, 0, 0, 0.12);

  display: flex;
  flex-direction: column;
  justify-content: space-between;
  /*수평 축 정렬 */
  align-items: center;
}

.submit_button {
  width: 416px;
  Height: 53px;
  border: 1px solid rgba(206, 222, 247, 1);
  gap: 10px;
  Padding: 17px 174px;
  border-radius: 57px;
  background-color: rgba(231, 242, 255, 1);
}

.email_button {
  width: 124px;
  height: 53px;
  border-radius: 10px;
  border-width: 1px;
  padding: 17px, 48px;
  margin-right: 0px;
  gap: 10px;
  background-color: rgba(231, 242, 255, 1);
  border: 1px solid rgba(206, 222, 247, 0.4);
  float: right;
}

#input {
  /*입력창 ex) 이름,주소,비밀번호,이메일 등*/
  width: 100%;
  height: 53px;
  border: 1px solid rgba(137, 132, 132, 0.4);
  border-radius: 16px;
}

#input2 {
  width: 100%;
  height: 50px;
  border: none;
  margin-left: 18px;
  background-color: transparent;
  width: 100%;
    font-family: Pretendard Variable;
    font-weight: 400;
    font-style: Regular;
    font-size: 16px;
    line-height: 100%;
    letter-spacing: -4%;
    color: rgba(119, 119, 119, 1);
    margin-left: 18px;
}

p {
  font-family: Pretendard Variable;
  font-weight: 500;
  font-style: Medium;
  font-size: 20px;
  line-height: 100%;
  letter-spacing: -4%;
  color: rgba(34, 34, 34, 1);
}



.button_text {
  font-family: Pretendard Variable;
  font-weight: 500;
  font-style: Medium;
  font-size: 16px;
  line-height: 100%;
  letter-spacing: -4%;
  color: rgba(51, 51, 51, 1);
}

.email_button_text {
  font-family: Pretendard Variable;
  font-weight: 400;
  font-style: Regular;
  font-size: 16px;
  line-height: 100%;
  letter-spacing: -4%;
  text-align: center;
  color: rgba(51, 51, 51, 1);

}

#input_wrap {
  gap: 8px 0;
}

#input_box {
  gap: 24px 0;
  width: 416px;
}

#line_box {
  width: 414px;
  height: 53px;
  display: flex;
}

h1 {
  /*ex) 회원가입, 등 제목*/
  width: 416px;
  height: 43px;

  font-family: Pretendard Variable;
  font-weight: 600;
  font-style: SemiBold;
  font-size: 36px;
  line-height: 100%;
  letter-spacing: -4%;
  text-align: center;
  color: rgba(0, 0, 0, 1);
}

#visible_btn {
  position: absolute;
  top: 50%;
  right: 24px;
  /*인풋 박스 안 placeholder 좌우 여백 24px에 일치*/
  transform: translateY(-50%);
}

.check_image {
  width: 72px;
  height: 72px;

}

